tests/baselines/reference/classOverloadForFunction2.errors.txt
==== tests/cases/compiler/classOverloadForFunction2.ts (2 errors) ====
    function bar(): string;
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    class bar {}
          ~~~
!!! error TS2300: Duplicate identifier 'bar'.